[package]
name = "polkadot-parachain-bin"
version = "5.0.0"
authors.workspace = true
build = "build.rs"
edition.workspace = true
description = "Runs a polkadot parachain node which could be a collator. (polkadot v1.15.0)"
license = "Apache-2.0"

[lints]
workspace = true

[[bin]]
name = "polkadot-parachain"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
color-print = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
docify = { workspace = true }
rococo-parachain-runtime.workspace = true
shell-runtime.workspace = true
glutton-westend-runtime.workspace = true
seedling-runtime.workspace = true
asset-hub-rococo-runtime.workspace = true
asset-hub-rococo-runtime.default-features = true
asset-hub-westend-runtime.workspace = true
collectives-westend-runtime.workspace = true
contracts-rococo-runtime.workspace = true
bridge-hub-rococo-runtime.workspace = true
bridge-hub-rococo-runtime.default-features = true
coretime-rococo-runtime.workspace = true
coretime-westend-runtime.workspace = true
bridge-hub-westend-runtime.workspace = true
bridge-hub-westend-runtime.default-features = true
penpal-runtime.workspace = true
jsonrpsee = { features = ["server"], workspace = true }
people-rococo-runtime.workspace = true
people-westend-runtime.workspace = true
parachains-common.workspace = true
parachains-common.default-features = true
testnet-parachains-constants = { features = ["rococo", "westend"], workspace = true }
frame-benchmarking.workspace = true
frame-benchmarking.default-features = true
frame-benchmarking-cli.workspace = true
frame-benchmarking-cli.default-features = true
sp-runtime.workspace = true
sp-io.workspace = true
sp-io.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-session.workspace = true
sp-session.default-features = true
frame-try-runtime = { optional = true, workspace = true, default-features = true }
sc-consensus.workspace = true
sc-consensus.default-features = true
sp-tracing.workspace = true
sp-tracing.default-features = true
frame-support.workspace = true
frame-support.default-features = true
sc-cli.workspace = true
sc-cli.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-executor.workspace = true
sc-executor.default-features = true
sc-service.workspace = true
sc-service.default-features = true
sc-telemetry.workspace = true
sc-telemetry.default-features = true
sc-transaction-pool.workspace = true
sc-transaction-pool.default-features = true
sp-transaction-pool.workspace = true
sp-transaction-pool.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sc-network-sync.workspace = true
sc-network-sync.default-features = true
sc-basic-authorship.workspace = true
sc-basic-authorship.default-features = true
sp-timestamp.workspace = true
sp-timestamp.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-genesis-builder.workspace = true
sp-block-builder.workspace = true
sp-block-builder.default-features = true
sp-keystore.workspace = true
sp-keystore.default-features = true
sc-chain-spec.workspace = true
sc-chain-spec.default-features = true
sc-rpc.workspace = true
sc-rpc.default-features = true
sp-version.workspace = true
sp-version.default-features = true
sc-tracing.workspace = true
sc-tracing.default-features = true
sp-offchain.workspace = true
sp-offchain.default-features = true
frame-system-rpc-runtime-api.workspace = true
frame-system-rpc-runtime-api.default-features = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment.default-features = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment-rpc-runtime-api.default-features = true
sp-std.workspace = true
sp-std.default-features = true
sp-inherents.workspace = true
sp-inherents.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-consensus-aura.workspace = true
sp-consensus-aura.default-features = true
sc-sysinfo.workspace = true
sc-sysinfo.default-features = true
prometheus-endpoint.workspace = true
prometheus-endpoint.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true
substrate-frame-rpc-system.workspace = true
substrate-frame-rpc-system.default-features = true
pallet-transaction-payment-rpc.workspace = true
pallet-transaction-payment-rpc.default-features = true
substrate-state-trie-migration-rpc.workspace = true
substrate-state-trie-migration-rpc.default-features = true
polkadot-cli = { features = ["rococo-native", "westend-native"], workspace = true, default-features = true }
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
polkadot-service.workspace = true
polkadot-service.default-features = true
xcm.workspace = true
xcm.default-features = true
cumulus-client-cli.workspace = true
cumulus-client-cli.default-features = true
cumulus-client-collator.workspace = true
cumulus-client-collator.default-features = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-aura.default-features = true
cumulus-client-consensus-relay-chain.workspace = true
cumulus-client-consensus-relay-chain.default-features = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-common.default-features = true
cumulus-client-consensus-proposer.workspace = true
cumulus-client-consensus-proposer.default-features = true
cumulus-client-parachain-inherent.workspace = true
cumulus-client-parachain-inherent.default-features = true
cumulus-client-service.workspace = true
cumulus-client-service.default-features = true
cumulus-primitives-aura.workspace = true
cumulus-primitives-aura.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true

[build-dependencies]
substrate-build-script-utils.workspace = true
substrate-build-script-utils.default-features = true

[dev-dependencies]
assert_cmd = { workspace = true }
nix = { features = ["signal"], workspace = true }
tempfile = { workspace = true }
tokio = { version = "1.32.0", features = ["macros", "parking_lot", "time"] }
wait-timeout = { workspace = true }

[features]
default = []
runtime-benchmarks = [
	"asset-hub-rococo-runtime/runtime-benchmarks",
	"asset-hub-westend-runtime/runtime-benchmarks",
	"bridge-hub-rococo-runtime/runtime-benchmarks",
	"bridge-hub-westend-runtime/runtime-benchmarks",
	"collectives-westend-runtime/runtime-benchmarks",
	"contracts-rococo-runtime/runtime-benchmarks",
	"coretime-rococo-runtime/runtime-benchmarks",
	"coretime-westend-runtime/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"glutton-westend-runtime/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"penpal-runtime/runtime-benchmarks",
	"people-rococo-runtime/runtime-benchmarks",
	"people-westend-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"rococo-parachain-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"cumulus-client-cli/runtime-benchmarks",
	"cumulus-client-collator/runtime-benchmarks",
	"cumulus-client-consensus-aura/runtime-benchmarks",
	"cumulus-client-consensus-common/runtime-benchmarks",
	"cumulus-client-consensus-proposer/runtime-benchmarks",
	"cumulus-client-consensus-relay-chain/runtime-benchmarks",
	"cumulus-client-parachain-inherent/runtime-benchmarks",
	"cumulus-client-service/runtime-benchmarks",
	"cumulus-primitives-aura/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"frame-try-runtime?/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-transaction-payment-rpc/runtime-benchmarks",
	"pallet-transaction-payment-rpc-runtime-api/runtime-benchmarks",
	"sc-basic-authorship/runtime-benchmarks",
	"sc-chain-spec/runtime-benchmarks",
	"sc-cli/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-consensus/runtime-benchmarks",
	"sc-executor/runtime-benchmarks",
	"sc-network/runtime-benchmarks",
	"sc-network-sync/runtime-benchmarks",
	"sc-rpc/runtime-benchmarks",
	"sc-sysinfo/runtime-benchmarks",
	"sc-tracing/runtime-benchmarks",
	"sc-transaction-pool/runtime-benchmarks",
	"sc-transaction-pool-api/runtime-benchmarks",
	"seedling-runtime/runtime-benchmarks",
	"shell-runtime/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-block-builder/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-consensus-aura/runtime-benchmarks",
	"sp-genesis-builder/runtime-benchmarks",
	"sp-inherents/runtime-benchmarks",
	"sp-offchain/runtime-benchmarks",
	"sp-session/runtime-benchmarks",
	"sp-timestamp/runtime-benchmarks",
	"sp-transaction-pool/runtime-benchmarks",
	"sp-version/runtime-benchmarks",
	"substrate-frame-rpc-system/runtime-benchmarks",
	"substrate-state-trie-migration-rpc/runtime-benchmarks",
	"testnet-parachains-constants/runtime-benchmarks",
	"frame-system-rpc-runtime-api/runtime-benchmarks",
	"sc-telemetry/runtime-benchmarks",
	"sp-io/runtime-benchmarks",
	"sp-core/runtime-benchmarks",
	"xcm/runtime-benchmarks",
	"sp-keystore/runtime-benchmarks"
]
try-runtime = [
	"asset-hub-rococo-runtime/try-runtime",
	"asset-hub-westend-runtime/try-runtime",
	"bridge-hub-rococo-runtime/try-runtime",
	"bridge-hub-westend-runtime/try-runtime",
	"collectives-westend-runtime/try-runtime",
	"contracts-rococo-runtime/try-runtime",
	"coretime-rococo-runtime/try-runtime",
	"coretime-westend-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-try-runtime/try-runtime",
	"glutton-westend-runtime/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"penpal-runtime/try-runtime",
	"people-rococo-runtime/try-runtime",
	"people-westend-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"polkadot-service/try-runtime",
	"shell-runtime/try-runtime",
	"sp-runtime/try-runtime",
	"cumulus-client-cli/try-runtime",
	"cumulus-client-collator/try-runtime",
	"cumulus-client-consensus-aura/try-runtime",
	"cumulus-client-consensus-common/try-runtime",
	"cumulus-client-consensus-proposer/try-runtime",
	"cumulus-client-consensus-relay-chain/try-runtime",
	"cumulus-client-parachain-inherent/try-runtime",
	"cumulus-client-service/try-runtime",
	"cumulus-primitives-aura/try-runtime",
	"cumulus-primitives-core/try-runtime",
	"frame-benchmarking/try-runtime",
	"frame-benchmarking-cli/try-runtime",
	"pallet-transaction-payment-rpc/try-runtime",
	"pallet-transaction-payment-rpc-runtime-api/try-runtime",
	"parachains-common/try-runtime",
	"polkadot-primitives/try-runtime",
	"rococo-parachain-runtime/try-runtime",
	"sc-basic-authorship/try-runtime",
	"sc-chain-spec/try-runtime",
	"sc-cli/try-runtime",
	"sc-client-api/try-runtime",
	"sc-consensus/try-runtime",
	"sc-executor/try-runtime",
	"sc-network/try-runtime",
	"sc-network-sync/try-runtime",
	"sc-rpc/try-runtime",
	"sc-service/try-runtime",
	"sc-sysinfo/try-runtime",
	"sc-tracing/try-runtime",
	"sc-transaction-pool/try-runtime",
	"sc-transaction-pool-api/try-runtime",
	"seedling-runtime/try-runtime",
	"sp-api/try-runtime",
	"sp-block-builder/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-consensus-aura/try-runtime",
	"sp-genesis-builder/try-runtime",
	"sp-inherents/try-runtime",
	"sp-offchain/try-runtime",
	"sp-session/try-runtime",
	"sp-timestamp/try-runtime",
	"sp-transaction-pool/try-runtime",
	"sp-version/try-runtime",
	"substrate-frame-rpc-system/try-runtime",
	"substrate-state-trie-migration-rpc/try-runtime",
	"testnet-parachains-constants/try-runtime",
	"cumulus-relay-chain-interface/try-runtime",
	"frame-system-rpc-runtime-api/try-runtime",
	"sc-telemetry/try-runtime",
	"sp-io/try-runtime",
	"sp-core/try-runtime",
	"xcm/try-runtime",
	"sp-keystore/try-runtime"
]
fast-runtime = [
	"bridge-hub-rococo-runtime/fast-runtime",
	"coretime-rococo-runtime/fast-runtime",
	"coretime-westend-runtime/fast-runtime",
]
std = [
	"cumulus-client-cli/std",
	"cumulus-client-collator/std",
	"cumulus-client-consensus-aura/std",
	"cumulus-client-consensus-common/std",
	"cumulus-client-consensus-proposer/std",
	"cumulus-client-consensus-relay-chain/std",
	"cumulus-client-parachain-inherent/std",
	"cumulus-client-service/std",
	"cumulus-relay-chain-interface/std",
	"frame-benchmarking-cli/std",
	"log/std",
	"pallet-transaction-payment-rpc/std",
	"polkadot-cli/std",
	"polkadot-service/std",
	"sc-basic-authorship/std",
	"sc-chain-spec/std",
	"sc-cli/std",
	"sc-client-api/std",
	"sc-consensus/std",
	"sc-network/std",
	"sc-network-sync/std",
	"sc-rpc/std",
	"sc-service/std",
	"sc-sysinfo/std",
	"sc-telemetry/std",
	"sc-tracing/std",
	"sc-transaction-pool/std",
	"sc-transaction-pool-api/std",
	"sp-blockchain/std",
	"sp-genesis-builder/std",
	"sp-runtime/std",
	"substrate-frame-rpc-system/std",
	"prometheus-endpoint/std",
	"substrate-state-trie-migration-rpc/std",
	"testnet-parachains-constants/std"
]
