[package]
name = "polkadot-sdk-docs"
description = "The one stop shop for developers of the polkadot-sdk (polkadot v1.15.0)"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "paritytech.github.io"
repository.workspace = true
authors.workspace = true
edition.workspace = true
# This crate is not publish-able to crates.io for now because of docify.
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
# Needed for all FRAME-based code
codec = { workspace = true }
scale-info = { workspace = true }
frame = { features = ["experimental", "runtime"], workspace = true, default-features = true }
pallet-examples.workspace = true
pallet-default-config-example.workspace = true
pallet-default-config-example.default-features = true
pallet-example-offchain-worker.workspace = true
pallet-example-offchain-worker.default-features = true

# How we build docs in rust-docs
simple-mermaid = "0.1.1"
docify = { workspace = true }
polkadot-sdk = { features = ["runtime"], workspace = true, default-features = true }
node-cli.workspace = true
kitchensink-runtime.workspace = true
chain-spec-builder.workspace = true
chain-spec-builder.default-features = true
subkey.workspace = true
subkey.default-features = true
frame-system.workspace = true
frame-support.workspace = true
frame-executive.workspace = true
pallet-example-single-block-migrations.workspace = true
pallet-example-single-block-migrations.default-features = true
frame-metadata-hash-extension.workspace = true
frame-metadata-hash-extension.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sc-rpc-api.workspace = true
sc-rpc-api.default-features = true
sc-rpc.workspace = true
sc-rpc.default-features = true
sc-client-db.workspace = true
sc-client-db.default-features = true
sc-cli.workspace = true
sc-cli.default-features = true
sc-consensus-aura.workspace = true
sc-consensus-aura.default-features = true
sc-consensus-babe.workspace = true
sc-consensus-babe.default-features = true
sc-consensus-grandpa.workspace = true
sc-consensus-grandpa.default-features = true
sc-consensus-beefy.workspace = true
sc-consensus-beefy.default-features = true
sc-consensus-manual-seal.workspace = true
sc-consensus-manual-seal.default-features = true
sc-consensus-pow.workspace = true
sc-consensus-pow.default-features = true
sc-executor.workspace = true
sc-executor.default-features = true
sc-service.workspace = true
sc-service.default-features = true
sc-chain-spec.workspace = true
sc-chain-spec.default-features = true
substrate-wasm-builder.workspace = true
substrate-wasm-builder.default-features = true
cumulus-pallet-aura-ext.workspace = true
cumulus-pallet-aura-ext.default-features = true
cumulus-pallet-parachain-system.workspace = true
cumulus-pallet-parachain-system.default-features = true
parachain-info.workspace = true
parachain-info.default-features = true
cumulus-primitives-proof-size-hostfunction.workspace = true
cumulus-primitives-proof-size-hostfunction.default-features = true
cumulus-client-service.workspace = true
cumulus-client-service.default-features = true
cumulus-primitives-storage-weight-reclaim.workspace = true
cumulus-primitives-storage-weight-reclaim.default-features = true
pallet-aura.workspace = true
pallet-aura.default-features = true
pallet-timestamp.workspace = true
pallet-timestamp.default-features = true
pallet-balances.workspace = true
pallet-balances.default-features = true
pallet-assets.workspace = true
pallet-assets.default-features = true
pallet-preimage.workspace = true
pallet-preimage.default-features = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment.default-features = true
pallet-asset-tx-payment.workspace = true
pallet-asset-tx-payment.default-features = true
pallet-skip-feeless-payment.workspace = true
pallet-skip-feeless-payment.default-features = true
pallet-asset-conversion-tx-payment.workspace = true
pallet-asset-conversion-tx-payment.default-features = true
pallet-utility.workspace = true
pallet-utility.default-features = true
pallet-multisig.workspace = true
pallet-multisig.default-features = true
pallet-proxy.workspace = true
pallet-proxy.default-features = true
pallet-authorship.workspace = true
pallet-authorship.default-features = true
pallet-collective.workspace = true
pallet-collective.default-features = true
pallet-democracy.workspace = true
pallet-democracy.default-features = true
pallet-uniques.workspace = true
pallet-uniques.default-features = true
pallet-nfts.workspace = true
pallet-nfts.default-features = true
pallet-scheduler.workspace = true
pallet-scheduler.default-features = true
pallet-referenda.workspace = true
pallet-referenda.default-features = true
pallet-broker.workspace = true
pallet-broker.default-features = true
pallet-babe.workspace = true
pallet-babe.default-features = true
sp-io.workspace = true
sp-io.default-features = true
sp-std.workspace = true
sp-std.default-features = true
sp-tracing.workspace = true
sp-tracing.default-features = true
sp-runtime-interface.workspace = true
sp-runtime-interface.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-keyring.workspace = true
sp-keyring.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-arithmetic.workspace = true
sp-arithmetic.default-features = true
sp-genesis-builder.workspace = true
sp-genesis-builder.default-features = true
sp-offchain.workspace = true
sp-offchain.default-features = true
sp-version.workspace = true
sp-version.default-features = true
xcm.workspace = true
xcm.default-features = true
xcm-docs.workspace = true
chain-spec-guide-runtime.workspace = true
minimal-template-runtime.workspace = true
solochain-template-runtime.workspace = true
parachain-template-runtime.workspace = true

[features]
std = [
	"cumulus-client-service/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"codec/std",
	"sc-chain-spec/std",
	"sc-cli/std",
	"sc-client-db/std",
	"sc-consensus-aura/std",
	"sc-consensus-babe/std",
	"sc-consensus-beefy/std",
	"sc-consensus-grandpa/std",
	"sc-consensus-manual-seal/std",
	"sc-consensus-pow/std",
	"sc-network/std",
	"sc-rpc/std",
	"sc-rpc-api/std",
	"sc-service/std",
	"scale-info/std",
	"chain-spec-builder/std",
	"node-cli/std",
	"subkey/std",
	"substrate-wasm-builder/std",
	"xcm-docs/std"
]
runtime-benchmarks = [
	"chain-spec-guide-runtime/runtime-benchmarks",
	"cumulus-client-service/runtime-benchmarks",
	"cumulus-pallet-aura-ext/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-primitives-storage-weight-reclaim/runtime-benchmarks",
	"frame-executive/runtime-benchmarks",
	"frame-metadata-hash-extension/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"kitchensink-runtime/runtime-benchmarks",
	"minimal-template-runtime/runtime-benchmarks",
	"pallet-asset-conversion-tx-payment/runtime-benchmarks",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-aura/runtime-benchmarks",
	"pallet-authorship/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-broker/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-default-config-example/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-example-offchain-worker/runtime-benchmarks",
	"pallet-example-single-block-migrations/runtime-benchmarks",
	"pallet-examples/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-skip-feeless-payment/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
	"frame/runtime-benchmarks",
	"sc-chain-spec/runtime-benchmarks",
	"sc-cli/runtime-benchmarks",
	"sc-client-db/runtime-benchmarks",
	"sc-consensus-aura/runtime-benchmarks",
	"sc-consensus-babe/runtime-benchmarks",
	"sc-consensus-beefy/runtime-benchmarks",
	"sc-consensus-grandpa/runtime-benchmarks",
	"sc-consensus-manual-seal/runtime-benchmarks",
	"sc-consensus-pow/runtime-benchmarks",
	"sc-executor/runtime-benchmarks",
	"sc-network/runtime-benchmarks",
	"sc-rpc/runtime-benchmarks",
	"sc-rpc-api/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"solochain-template-runtime/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-genesis-builder/runtime-benchmarks",
	"sp-keyring/runtime-benchmarks",
	"sp-offchain/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-version/runtime-benchmarks",
	"node-cli/runtime-benchmarks",
	"parachain-info/runtime-benchmarks",
	"xcm-docs/runtime-benchmarks",
	"cumulus-primitives-proof-size-hostfunction/runtime-benchmarks",
	"sp-io/runtime-benchmarks",
	"sp-runtime-interface/runtime-benchmarks",
	"chain-spec-builder/runtime-benchmarks",
	"subkey/runtime-benchmarks",
	"substrate-wasm-builder/runtime-benchmarks",
	"sp-core/runtime-benchmarks",
	"xcm/runtime-benchmarks"
]
try-runtime = [
	"chain-spec-guide-runtime/try-runtime",
	"cumulus-client-service/try-runtime",
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-primitives-storage-weight-reclaim/try-runtime",
	"frame-executive/try-runtime",
	"frame-metadata-hash-extension/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"kitchensink-runtime/try-runtime",
	"minimal-template-runtime/try-runtime",
	"pallet-asset-conversion-tx-payment/try-runtime",
	"pallet-asset-tx-payment/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-broker/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-default-config-example/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-example-offchain-worker/try-runtime",
	"pallet-example-single-block-migrations/try-runtime",
	"pallet-examples/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-skip-feeless-payment/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-uniques/try-runtime",
	"pallet-utility/try-runtime",
	"parachain-template-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
	"frame/try-runtime",
	"sc-chain-spec/try-runtime",
	"sc-cli/try-runtime",
	"sc-client-db/try-runtime",
	"sc-consensus-aura/try-runtime",
	"sc-consensus-babe/try-runtime",
	"sc-consensus-beefy/try-runtime",
	"sc-consensus-grandpa/try-runtime",
	"sc-consensus-manual-seal/try-runtime",
	"sc-consensus-pow/try-runtime",
	"sc-executor/try-runtime",
	"sc-network/try-runtime",
	"sc-rpc/try-runtime",
	"sc-rpc-api/try-runtime",
	"sc-service/try-runtime",
	"solochain-template-runtime/try-runtime",
	"sp-api/try-runtime",
	"sp-genesis-builder/try-runtime",
	"sp-keyring/try-runtime",
	"sp-offchain/try-runtime",
	"sp-runtime/try-runtime",
	"sp-version/try-runtime",
	"node-cli/try-runtime",
	"parachain-info/try-runtime",
	"xcm-docs/try-runtime",
	"cumulus-primitives-proof-size-hostfunction/try-runtime",
	"sp-io/try-runtime",
	"sp-runtime-interface/try-runtime",
	"chain-spec-builder/try-runtime",
	"subkey/try-runtime",
	"substrate-wasm-builder/try-runtime",
	"sp-core/try-runtime",
	"xcm/try-runtime"
]
