[package]
name = "polkadot-erasure-coding"
version = "15.0.0"
description = "Erasure coding used for Polkadot's availability system (polkadot v1.15.0)"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
polkadot-node-primitives.workspace = true
polkadot-node-primitives.default-features = true
novelpoly = { workspace = true }
codec = { features = ["derive", "std"], workspace = true }
sp-core.workspace = true
sp-core.default-features = true
sp-trie.workspace = true
sp-trie.default-features = true
thiserror = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
criterion = { features = ["cargo_bench_support"], workspace = true }

[[bench]]
name = "scaling_with_validators"
harness = false

[features]
std = [
	"codec/std",
	"polkadot-node-primitives/std"
]
runtime-benchmarks = [
	"polkadot-node-primitives/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-trie/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"polkadot-node-primitives/try-runtime",
	"polkadot-primitives/try-runtime",
	"sp-trie/try-runtime",
	"sp-core/try-runtime"
]
