[package]
name = "polkadot-rpc"
version = "17.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Polkadot specific RPC functionality. (polkadot v1.15.0)"

[lints]
workspace = true

[dependencies]
jsonrpsee = { features = ["server"], workspace = true }
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-keystore.workspace = true
sp-keystore.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-application-crypto.workspace = true
sp-application-crypto.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-consensus-babe.workspace = true
sp-consensus-babe.default-features = true
sp-consensus-beefy.workspace = true
sp-consensus-beefy.default-features = true
sc-chain-spec.workspace = true
sc-chain-spec.default-features = true
sc-rpc.workspace = true
sc-rpc.default-features = true
sc-rpc-spec-v2.workspace = true
sc-rpc-spec-v2.default-features = true
sc-consensus-babe.workspace = true
sc-consensus-babe.default-features = true
sc-consensus-babe-rpc.workspace = true
sc-consensus-babe-rpc.default-features = true
sc-consensus-beefy.workspace = true
sc-consensus-beefy.default-features = true
sc-consensus-beefy-rpc.workspace = true
sc-consensus-beefy-rpc.default-features = true
sc-consensus-epochs.workspace = true
sc-consensus-epochs.default-features = true
sc-consensus-grandpa.workspace = true
sc-consensus-grandpa.default-features = true
sc-consensus-grandpa-rpc.workspace = true
sc-consensus-grandpa-rpc.default-features = true
sc-sync-state-rpc.workspace = true
sc-sync-state-rpc.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true
substrate-frame-rpc-system.workspace = true
substrate-frame-rpc-system.default-features = true
mmr-rpc.workspace = true
mmr-rpc.default-features = true
pallet-transaction-payment-rpc.workspace = true
pallet-transaction-payment-rpc.default-features = true
sp-block-builder.workspace = true
sp-block-builder.default-features = true
substrate-state-trie-migration-rpc.workspace = true
substrate-state-trie-migration-rpc.default-features = true

[features]
std = [
	"mmr-rpc/std",
	"pallet-transaction-payment-rpc/std",
	"sc-chain-spec/std",
	"sc-client-api/std",
	"sc-consensus-babe/std",
	"sc-consensus-babe-rpc/std",
	"sc-consensus-beefy/std",
	"sc-consensus-beefy-rpc/std",
	"sc-consensus-epochs/std",
	"sc-consensus-grandpa/std",
	"sc-consensus-grandpa-rpc/std",
	"sc-rpc/std",
	"sc-rpc-spec-v2/std",
	"sc-sync-state-rpc/std",
	"sc-transaction-pool-api/std",
	"sp-blockchain/std",
	"sp-consensus/std",
	"substrate-frame-rpc-system/std",
	"substrate-state-trie-migration-rpc/std"
]
runtime-benchmarks = [
	"mmr-rpc/runtime-benchmarks",
	"pallet-transaction-payment-rpc/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-chain-spec/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-consensus-babe/runtime-benchmarks",
	"sc-consensus-babe-rpc/runtime-benchmarks",
	"sc-consensus-beefy/runtime-benchmarks",
	"sc-consensus-beefy-rpc/runtime-benchmarks",
	"sc-consensus-epochs/runtime-benchmarks",
	"sc-consensus-grandpa/runtime-benchmarks",
	"sc-consensus-grandpa-rpc/runtime-benchmarks",
	"sc-rpc/runtime-benchmarks",
	"sc-rpc-spec-v2/runtime-benchmarks",
	"sc-sync-state-rpc/runtime-benchmarks",
	"sc-transaction-pool-api/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-block-builder/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-consensus/runtime-benchmarks",
	"sp-consensus-babe/runtime-benchmarks",
	"sp-consensus-beefy/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"substrate-frame-rpc-system/runtime-benchmarks",
	"substrate-state-trie-migration-rpc/runtime-benchmarks",
	"sp-application-crypto/runtime-benchmarks",
	"sp-keystore/runtime-benchmarks"
]
try-runtime = [
	"mmr-rpc/try-runtime",
	"pallet-transaction-payment-rpc/try-runtime",
	"polkadot-primitives/try-runtime",
	"sc-chain-spec/try-runtime",
	"sc-client-api/try-runtime",
	"sc-consensus-babe/try-runtime",
	"sc-consensus-babe-rpc/try-runtime",
	"sc-consensus-beefy/try-runtime",
	"sc-consensus-beefy-rpc/try-runtime",
	"sc-consensus-epochs/try-runtime",
	"sc-consensus-grandpa/try-runtime",
	"sc-consensus-grandpa-rpc/try-runtime",
	"sc-rpc/try-runtime",
	"sc-rpc-spec-v2/try-runtime",
	"sc-sync-state-rpc/try-runtime",
	"sc-transaction-pool-api/try-runtime",
	"sp-api/try-runtime",
	"sp-block-builder/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-consensus/try-runtime",
	"sp-consensus-babe/try-runtime",
	"sp-consensus-beefy/try-runtime",
	"sp-runtime/try-runtime",
	"substrate-frame-rpc-system/try-runtime",
	"substrate-state-trie-migration-rpc/try-runtime",
	"sp-application-crypto/try-runtime",
	"sp-keystore/try-runtime"
]
