[package]
name = "bp-bridge-hub-cumulus"
description = "Primitives for BridgeHub parachain runtimes. (polkadot v1.15.0)"
version = "0.17.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
bp-polkadot-core.workspace = true
bp-messages.workspace = true
bp-runtime.workspace = true
frame-system.workspace = true
frame-support.workspace = true
sp-api.workspace = true
sp-std.workspace = true
polkadot-primitives.workspace = true

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"polkadot-primitives/std",
	"sp-api/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"bp-messages/runtime-benchmarks",
	"bp-polkadot-core/runtime-benchmarks",
	"bp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-api/runtime-benchmarks"
]
try-runtime = [
	"bp-messages/try-runtime",
	"bp-polkadot-core/try-runtime",
	"bp-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"polkadot-primitives/try-runtime",
	"sp-api/try-runtime"
]
