[package]
name = "bp-polkadot-bulletin"
description = "Primitives of Polkadot Bulletin chain runtime. (polkadot v1.15.0)"
version = "0.14.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
bp-header-chain.workspace = true
bp-messages.workspace = true
bp-polkadot-core.workspace = true
bp-runtime.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-api.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"bp-header-chain/runtime-benchmarks",
	"bp-messages/runtime-benchmarks",
	"bp-polkadot-core/runtime-benchmarks",
	"bp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]
try-runtime = [
	"bp-header-chain/try-runtime",
	"bp-messages/try-runtime",
	"bp-polkadot-core/try-runtime",
	"bp-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-api/try-runtime",
	"sp-runtime/try-runtime"
]
