[package]
name = "bp-polkadot"
description = "Primitives of Polkadot runtime. (polkadot v1.15.0)"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
bp-header-chain.workspace = true
bp-polkadot-core.workspace = true
bp-runtime.workspace = true
frame-support.workspace = true
sp-api.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"bp-header-chain/runtime-benchmarks",
	"bp-polkadot-core/runtime-benchmarks",
	"bp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"sp-api/runtime-benchmarks"
]
try-runtime = [
	"bp-header-chain/try-runtime",
	"bp-polkadot-core/try-runtime",
	"bp-runtime/try-runtime",
	"frame-support/try-runtime",
	"sp-api/try-runtime"
]
