[package]
name = "bp-beefy"
description = "Primitives of pallet-bridge-beefy module. (polkadot v1.15.0)"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { features = ["bit-vec", "derive"], workspace = true }
scale-info = { features = ["bit-vec", "derive"], workspace = true }
serde = { features = ["alloc", "derive"], workspace = true }
bp-runtime.workspace = true
binary-merkle-tree.workspace = true
sp-consensus-beefy.workspace = true
frame-support.workspace = true
pallet-beefy-mmr.workspace = true
pallet-mmr.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"binary-merkle-tree/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"pallet-beefy-mmr/std",
	"pallet-mmr/std",
	"scale-info/std",
	"serde/std",
	"sp-consensus-beefy/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"binary-merkle-tree/runtime-benchmarks",
	"bp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-beefy-mmr/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"sp-consensus-beefy/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]
try-runtime = [
	"binary-merkle-tree/try-runtime",
	"bp-runtime/try-runtime",
	"frame-support/try-runtime",
	"pallet-beefy-mmr/try-runtime",
	"pallet-mmr/try-runtime",
	"sp-consensus-beefy/try-runtime",
	"sp-runtime/try-runtime"
]
