[package]
name = "relay-substrate-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
publish = false
description = "relay-substrate-client (polkadot v1.15.0)"

[lints]
workspace = true

[dependencies]
async-std = { features = ["attributes"], workspace = true }
async-trait = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
jsonrpsee = { features = ["macros", "ws-client"], workspace = true }
log = { workspace = true }
num-traits = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
serde_json = { workspace = true }
scale-info = { features = ["derive"], workspace = true, default-features = true }
tokio = { features = ["rt-multi-thread"], workspace = true, default-features = true }
thiserror = { workspace = true }
quick_cache = { workspace = true }
bp-header-chain.workspace = true
bp-header-chain.default-features = true
bp-messages.workspace = true
bp-messages.default-features = true
bp-polkadot-core.workspace = true
bp-polkadot-core.default-features = true
bp-runtime.workspace = true
bp-runtime.default-features = true
finality-relay.workspace = true
relay-utils.workspace = true
frame-support.workspace = true
frame-support.default-features = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment.default-features = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment-rpc-runtime-api.default-features = true
pallet-utility.workspace = true
pallet-utility.default-features = true
sc-chain-spec.workspace = true
sc-chain-spec.default-features = true
sc-rpc-api.workspace = true
sc-rpc-api.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true
sp-consensus-grandpa.workspace = true
sp-consensus-grandpa.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-rpc.workspace = true
sp-rpc.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-std.workspace = true
sp-std.default-features = true
sp-trie.workspace = true
sp-trie.default-features = true
sp-version.workspace = true
sp-version.default-features = true
xcm.workspace = true
xcm.default-features = true

[features]
default = []
test-helpers = []
std = [
	"finality-relay/std",
	"log/std",
	"relay-utils/std",
	"sc-chain-spec/std",
	"sc-rpc-api/std",
	"sc-transaction-pool-api/std",
	"serde_json/std",
	"sp-rpc/std"
]
runtime-benchmarks = [
	"bp-header-chain/runtime-benchmarks",
	"bp-messages/runtime-benchmarks",
	"bp-polkadot-core/runtime-benchmarks",
	"bp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-transaction-payment-rpc-runtime-api/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"relay-utils/runtime-benchmarks",
	"sc-chain-spec/runtime-benchmarks",
	"sc-rpc-api/runtime-benchmarks",
	"sc-transaction-pool-api/runtime-benchmarks",
	"sp-consensus-grandpa/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-trie/runtime-benchmarks",
	"sp-version/runtime-benchmarks",
	"finality-relay/runtime-benchmarks",
	"sp-core/runtime-benchmarks",
	"xcm/runtime-benchmarks",
	"sp-rpc/runtime-benchmarks"
]
try-runtime = [
	"bp-header-chain/try-runtime",
	"bp-messages/try-runtime",
	"bp-polkadot-core/try-runtime",
	"bp-runtime/try-runtime",
	"frame-support/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-transaction-payment-rpc-runtime-api/try-runtime",
	"pallet-utility/try-runtime",
	"relay-utils/try-runtime",
	"sc-chain-spec/try-runtime",
	"sc-rpc-api/try-runtime",
	"sc-transaction-pool-api/try-runtime",
	"sp-consensus-grandpa/try-runtime",
	"sp-runtime/try-runtime",
	"sp-trie/try-runtime",
	"sp-version/try-runtime",
	"finality-relay/try-runtime",
	"sp-core/try-runtime",
	"xcm/try-runtime",
	"sp-rpc/try-runtime"
]
